Initial check-in.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-# Compiled class file
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
+target
+faces-config.NavData
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -14,9 +9,22 @@
 *.jar
 *.war
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+hs_err_pid
+
+#jbds
+.project
+.settings/
+.loadpath
+bin/
+tmp/
+.metadata
+.classpath
+
+#idea
+.idea
+*.iml
+
+#temporary files
+*~
